Synchronizing local and upstream changes
Synchronizing my local copy and the remote's changes all at the
same time; also re-added "===== <New Section> =====" to the end of
the TODO file.

--- a/Eclipse_Settings/.gitignore
+++ b/Eclipse_Settings/.gitignore
@@ -1,1 +1,8 @@
 /JavaFX/
+/Cygwin_Installation/
+/Using Eclipse to Cross-compile, Part 1_ Install a Toolchain_files/
+/Using Eclipse to Cross-compile, Part 2_ Install Eclipse and C_C++ Development Tools_files/
+/Using Eclipse to Cross-compile, Part 1_ Install a Toolchain.html
+/Using Eclipse to Cross-compile, Part 2_ Install Eclipse and C_C++ Development Tools.html
+/Eclipse Community Forums- C - C++ IDE (CDT) » Installing C++ IDE in Java IDE.url
+/How to install and use Eclipse CDT for C-C++ programming.url
